Extend leader for list